--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.6",
+    "html-react-parser": "^3.0.4",
     "next": "^12.2.4-canary.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
     "react-slick": "^0.29.0",
+    "remark-gfm": "^3.0.1",
     "slick-carousel": "^1.8.1",
     "tw-elements": "^1.0.0-alpha12"
   },
