--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GOOGLE_MAP_API = AIzaSyBhGEpDDn0daNsXT682u_dLB30qiM6AuSk
-BASE_URL = http://localhost:1337
+BASE_URL = https://tashielectronicsbackend.tashicell.com
 NODE_ENV = 'production'
